--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="form-group row">
             <label for="url" class="col-sm-2 col-form-label">URL</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" id="url" placeholder="Enter URL here">
+                <input type="text" class="form-control" id="url" placeholder="Enter any URL here">
             </div>
         </div>
 
@@ -68,7 +68,7 @@
                         </label>
                     </div>
                     <div class="form-check">
-                        <input class="form-check-input" type="radio" name="requestType" id="post" value="POST">
+                        <input class="form-check-input btn btn-success" type="radio" name="requestType" id="post" value="POST">
                         <label class="form-check-label" for="post">
                             POST
                         </label>
@@ -141,7 +141,7 @@
                     <!-- <textarea class="form-control" id="responseJsonText" rows="3">Your response will appear here</textarea> -->
 
                     <pre id='responsePre'
-                        class="language-javascript"> <code id='responsePrism' class="language-javascript"> Your response will appear here </code> </pre>
+                        class="language-javascript"> <code id='responsePrism' class="language-javascript"> Your response will be appear here:</code> </pre>
                 </div>
             </div>
         </div>
